corrected typo in README + config for TS compatibility

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,9 +10,14 @@
     "outDir": "./dist",  // Le dossier de sortie
     "rootDir": "./src",  // Dossier source
     "declarationDir": "./dist",  // Dossier des déclarations de types
-    "allowJs": true
+    "allowJs": true,
+    "baseUrl": ".",
+    "paths": {
+      "@components/*": ["src/components/*"],
+    }
   },
   "include": ["src/**/*"],
+  "exclude": ["node_modules", "dist"],
   "references": [
     { "path": "./tsconfig.app.json" },
     { "path": "./tsconfig.node.json" }
