--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "bugs": "https://github.com/hichamecode/hichamebelyazid-modal/issues",
   "scripts": {
     "dev": "vite",
-    "build": "tsc -b && vite build",
+    "build": "tsc && npm run copy-files",
+    "copy-files": "ncp ./src/components ./dist/components",
+    "clean": "rimraf dist",
     "lint": "eslint .",
     "preview": "vite preview"
   },
@@ -54,6 +56,8 @@
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.14",
     "globals": "^15.11.0",
+    "ncp": "^2.0.0",
+    "rimraf": "^6.0.1",
     "typescript": "~5.6.2",
     "typescript-eslint": "^8.11.0",
     "vite": "^5.4.10"
